SERVER-25686 send all moveChunk commands through to the shard to wait for waitForDelete